feat: add responsive sidebar

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
     background-color: var(--ms-main-bg);
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .ms-bg-dark-blue {
     background-color: var(--ms-dark-blue);
 }
@@ -71,7 +76,7 @@ header .dropdown .btn {
     width: 4.375rem;
     flex-shrink: 0;
     color: #fff;
-    padding: 1.25rem;
+    padding: 2.25rem 1.25rem;
     display: flex;
     flex-direction: column;
 }
@@ -91,6 +96,10 @@ Extra extra large	xxl	≥1400px
 @media screen and (min-width: 992px) {
     .ms-sidebar {
         width: 9.375rem;
+    }
+
+    .ms-sidebar a span:first-of-type {
+        width: 25%;
     }
 }
 
