feat: add next-classes + to-do section

--- a/style.css
+++ b/style.css
@@ -64,10 +64,13 @@ header .dropdown .btn {
 
 /* #endregion HEADER */
 /* #region MAIN */
+main {
+    overflow: auto;
+}
+
 .ms-page-wrapper {
     height: calc(100vh - 4.375rem);
     display: flex;
-    overflow: hidden;
 }
 
 .ms-sidebar {
@@ -96,9 +99,22 @@ header .dropdown .btn {
     color: #fff;
 }
 
+.ms-action-btn {
+    background-color: transparent;
+    border: 1px solid #6c757d;
+    border-radius: 4px;
+    color: #6c757d;
+}
+
 #offcanvasRight {
     width: 100%;
     transition: width 0.25s ease;
+}
+
+.ms-table-logo-xs {
+    width: 1.875rem;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 /* #endregion MAIN */
